--- a/docs/thesis/backMatter/acronimi.tex
+++ b/docs/thesis/backMatter/acronimi.tex
@@ -17,6 +17,7 @@
 \newacronym{eaqi}{EAQI}{European Air Quality Index}
 \newacronym{eea}{EEA}{European Environment Agency}
 \newacronym{epsg}{EPSG}{European Petroleum Survey Group}
+\newacronym{fifo}{FIFO}{First In First Out}
 \newacronym{gis}{GIS}{Geographic Information System}
 \newacronym{gps}{GPS}{Global Positioning System}
 \newacronym{html}{HTML}{HyperText Markup Language}
@@ -28,7 +29,6 @@
 \newacronym{iso}{ISO}{Internation Standard Organization}
 \newacronym{json}{JSON}{Javascript Object Notation}
 \newacronym{kraft}{KRaft}{Kafka Raft}
-\newacronym{fifo}{FIFO}{First In First Out}
 \newacronym{no2}{NO2}{Diossido di azoto}
 \newacronym{npm}{npm}{Node Package Manager}
 \newacronym{o3}{O3}{Ozono}
@@ -39,12 +39,18 @@
 \newacronym{pypi}{PyPI}{Python Package Index}
 \newacronym{ql}{QL}{Query Language}
 \newacronym{rest}{REST}{Representational State Transfer}
+\newacronym{saref}{SAREF}{Smart Applications REFerence ontology}
 \newacronym{sfc}{SFC}{Single File Components}
 \newacronym{so2}{SO2}{Anidride solforosa}
 \newacronym{spa}{SPA}{Single Page Applications}
 \newacronym{srp}{SRP}{Single Responsibility Principle}
 \newacronym{svg}{SVG}{Scalable Vector Graphics}
+\newacronym{td}{TD}{Thing Descriptions}
 \newacronym{ttl}{TTL}{Time To Live}
+\newacronym{uri}{URI}{Uniform Resource Identifier}
+\newacronym{w3c}{W3C}{World Wide Web Consortium}
 \newacronym{wgs84}{WGS84}{World Geodetic System 1984}
+\newacronym{wot}{WoT}{Web of Things}
+\newacronym{www}{WWW}{World Wide Web}
 \newacronym{xml}{XML}{Extensible Markup Language}
 \newacronym{ztl}{ZTL}{Zona Traffico Limitato}
