--- a/docs/thesis/backMatter/biblio.bib
+++ b/docs/thesis/backMatter/biblio.bib
@@ -879,3 +879,80 @@
   address   = {Boston, MA},
   isbn      = {978-0-12-381464-7}
 }
+@techreport{w3c-wot-td,
+  title       = {Web of Things (WoT) Thing Description},
+  author      = {{W3C WoT Working Group}},
+  institution = {World Wide Web Consortium},
+  year        = {2020},
+  month       = {April},
+  url         = {https://www.w3.org/TR/wot-thing-description/},
+  note        = {W3C Recommendation}
+}
+
+@techreport{w3c-wot-architecture,
+  title       = {Web of Things (WoT) Architecture},
+  author      = {{W3C WoT Working Group}},
+  institution = {World Wide Web Consortium},
+  year        = {2020},
+  month       = {April},
+  url         = {https://www.w3.org/TR/wot-architecture/},
+  note        = {W3C Recommendation}
+}
+
+@misc{saref-ontology,
+  title        = {SAREF: the Smart Applications REFerence ontology},
+  author       = {{ETSI Technical Committee SmartM2M}},
+  organization = {European Telecommunications Standards Institute},
+  year         = {2020},
+  url          = {https://saref.etsi.org/core/},
+  note         = {ETSI TS 103 264}
+}
+
+@phdthesis{fielding-rest,
+  title  = {Architectural Styles and the Design of Network-based Software Architectures},
+  author = {Fielding, Roy Thomas},
+  year   = {2000},
+  school = {University of California, Irvine},
+  url    = {https://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm}
+}
+
+@article{guinard-wot,
+  title     = {The Web of Things: challenges and opportunities for the Internet of Things},
+  author    = {Guinard, Dominique and Trifa, Vlad and Wilde, Erik},
+  journal   = {Computer},
+  volume    = {44},
+  number    = {4},
+  pages     = {30--37},
+  year      = {2011},
+  publisher = {IEEE}
+}
+
+@article{battaglia-iot-semantics,
+  title     = {The role of ontologies in enabling dynamic interoperability},
+  author    = {Battaglia, Flavio and others},
+  journal   = {Future Generation Computer Systems},
+  volume    = {76},
+  pages     = {371--382},
+  year      = {2017},
+  publisher = {Elsevier}
+}
+
+@inproceedings{kovatsch-wot,
+  title        = {A RESTful runtime for the Web of Things},
+  author       = {Kovatsch, Matthias and Lanter, Marius and Shelby, Zach},
+  booktitle    = {Internet of Things (IOT), 2012 3rd International Conference on the},
+  pages        = {10--17},
+  year         = {2012},
+  organization = {IEEE}
+}
+
+@article{stirbu-wot-middleware,
+  title     = {Towards a RESTful plug \& play experience in the Web of Things},
+  author    = {Stirbu, Vlad},
+  journal   = {Semantic Web},
+  volume    = {1},
+  number    = {1-2},
+  pages     = {105--110},
+  year      = {2010},
+  publisher = {IOS Press}
+}
