--- a/docs/thesis/backMatter/ringraziamenti.tex
+++ b/docs/thesis/backMatter/ringraziamenti.tex
@@ -1,14 +1,23 @@
 \rhead[\fancyplain{}{\bfseries \leftmark}]{\fancyplain{}{\bfseries
     \thepage}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%aggiunge la voce Bibliografia
-%   nell'indice
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%non numera l'ultima pagina sinistra
-\clearpage{\pagestyle{empty}\cleardoublepage}
+    \clearpage{\pagestyle{empty}\cleardoublepage}
 \chapter*{Ringraziamenti}
 \thispagestyle{empty}
 
 \addcontentsline{toc}{chapter}{Ringraziamenti}
 
-Qui possiamo ringraziare il mondo intero!!!!!!!!!!\\
-Ovviamente solo se uno vuole, non \`e obbligatorio.
+Vorrei ringraziare Miriana, che mi sostiene ed accompagna ogni giorno nelle difficoltà e negli impegni della vita
+che assieme ci stiamo costruendo.
+
+Ringrazio i miei genitori, Anna e Domenico, mia sorella Benedetta, mia cugina Valeria e la mia famiglia tutta.
+
+Ringrazio i miei suoceri, Immacolata e Marco, che mi hanno sin da subito accolto nella loro vita e fatto sentire parte
+della famiglia, ma che sopratutto mi hanno permesso di scegliere Miriana come la mia compagna.
+
+Ringrazio Luca, che prima di essere stato il mio mentore e collega è stato mio amico.
+
+Ringrazio Daniele, nel quale ho trovato un amico sincero e leale.
+
+Ringrazio il Professor Olaiya, che mi ha seguito in questo lavoro con attenzione e disponibilità, senza il quale
+non sarebbe stato possibile realizzare quanto prodotto.
