--- a/docs/thesis/tesi.tex
+++ b/docs/thesis/tesi.tex
@@ -132,9 +132,9 @@
 % The line containing \listoffigures and \listoftables commands)  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \input{backMatter/conclusioni.tex}
+\input{backMatter/conclusioni.tex}
 \input{backMatter/bibliografia.tex}
-% \input{backMatter/ringraziamenti.tex}
+\input{backMatter/ringraziamenti.tex}
 
 %\input{./Appendice/appendice.tex}
 % \input{./Bibliografia/bibliografia.tex}
